Working on Week 3 Content

--- a/week2/week2_workshop.ipynb
+++ b/week2/week2_workshop.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"6146\"\n",
+      "Document ID: \"6146\"\n",
       "Word count: 137\n"
      ]
     }
@@ -92,72 +92,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def select_sentence(input_path, stopwords):\n",
-    "\n",
+    "def parse_doc(input_path, stop_words):\n",
     "    my_file = open(input_path, 'r')\n",
-    "    selected_sentence = ''\n",
+    "\n",
+    "    stopwords_file = open(stop_words, 'r')\n",
+    "    stop_words_list = stopwords_file.readlines()\n",
+    "    stopwords_file.close()\n",
+    "\n",
+    "    stop_words_list = stop_words_list[0].split(',')\n",
+    "\n",
+    "    word_count = 0\n",
+    "    docid = ''\n",
+    "    curr_doc = {}\n",
+    "\n",
     "    start_end = False\n",
+    "    parsed_text = []\n",
+    "    \n",
+    "\n",
     "    file_ = my_file.readlines()\n",
     "\n",
     "    for line in file_:\n",
     "        line = line.strip()\n",
-    "        if start_end == False:\n",
-    "            if line.startswith('<text>'):\n",
-    "                start_end = True\n",
-    "            elif line.startswith('</text>'):\n",
-    "                break\n",
-    "            else:\n",
-    "                if line.startswith('<p>The'):\n",
-    "                    selected_sentence = line\n",
+    "\n",
+    "        if line.startswith('<text>'):\n",
+    "            start_end = True\n",
+    "        if line.startswith('<newsitem '):\n",
+    "            for part in line.split():\n",
+    "                if part.startswith('itemid='):\n",
+    "                    docid = part.split('=')[1].split('/')[0]\n",
+    "                    docid = docid.replace('\"', '')\n",
+    "        elif line.startswith('<p>'):\n",
+    "            line = line.replace('<p>', '').replace('</p>', '')\n",
+    "            line = line.translate(str.maketrans('', '', string.punctuation))\n",
+    "            line = line.replace('quot', '')\n",
+    "        elif line.startswith('</text>'):\n",
+    "            start_end = False\n",
+    "        if start_end:\n",
+    "            parsed_text.append(line)\n",
+    "\n",
+    "    split_text = []\n",
+    "\n",
+    "    for line in parsed_text:\n",
+    "        for word in line.split(): \n",
+    "            word_count += 1\n",
+    "\n",
+    "            if word.lower() not in stop_words_list and not word.isdigit():\n",
+    "                word = word.lower()\n",
+    "                split_text.append(word)\n",
+    "\n",
+    "    split_text.remove('<text>')\n",
+    "    for word in split_text:\n",
+    "        if word not in curr_doc:\n",
+    "            curr_doc[word] = 1\n",
+    "        else:\n",
+    "            curr_doc[word] += 1\n",
     "    \n",
-    "    myfile.close()\n",
-    "    return selected_sentence"
+    "    my_file.close()\n",
+    "    return (word_count, docid, curr_doc)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Opening and initialising the stopwords variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopwords_file = open('wk2_workshop_data/common-english-words.txt', 'r')\n",
+    "stop_words_list = stopwords_file.readlines()\n",
+    "stopwords_file.close()\n",
+    "\n",
+    "stop_words_list = stop_words_list[0].split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected str, bytes or os.PathLike object, not TextIOWrapper",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m stopwords_file \u001b[38;5;241m=\u001b[39m common_stopwords_file\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m common_stopwords_file\u001b[38;5;241m.\u001b[39mclose()\n\u001b[0;32m---> 13\u001b[0m line \u001b[38;5;241m=\u001b[39m \u001b[43mselect_sentence\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdocument_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstopwords_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m line \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m<p>\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m</p>\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     15\u001b[0m line \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mtranslate(\u001b[38;5;28mstr\u001b[39m\u001b[38;5;241m.\u001b[39mmaketrans(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, string\u001b[38;5;241m.\u001b[39mdigits))\u001b[38;5;241m.\u001b[39mtranslate(\u001b[38;5;28mstr\u001b[39m\u001b[38;5;241m.\u001b[39mmaketrans(string\u001b[38;5;241m.\u001b[39mpunctuation, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mlen\u001b[39m(string\u001b[38;5;241m.\u001b[39mpunctuation)))\n",
-      "Cell \u001b[0;32mIn[28], line 3\u001b[0m, in \u001b[0;36mselect_sentence\u001b[0;34m(input_path, stopwords)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mselect_sentence\u001b[39m(input_path, stopwords):\n\u001b[0;32m----> 3\u001b[0m     my_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43minput_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     selected_sentence \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      5\u001b[0m     start_end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "File \u001b[0;32m~/Library/Python/3.13/lib/python/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not TextIOWrapper"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(137, '6146', {'argentine': 1, 'bonds': 1, 'slightly': 1, 'higher': 1, 'small': 1, 'technical': 2, 'bounce': 2, 'wednesday': 1, 'amid': 1, 'low': 1, 'volume': 1, 'a': 1, 'trader': 2, 'large': 1, 'foreign': 1, 'bank': 1, 'slight': 1, 'opening': 1, 'expect': 1, 'prices': 1, 'change': 1, 'much': 1, 'during': 1, 'session': 1, 'marketmoving': 1, 'news': 1, 'expected': 2, 'the': 1, 'percent': 1, 'dollardenominated': 1, 'bocon': 1, 'previsional': 1, 'due': 2, 'rose': 2, 'argentinas': 2, 'frb': 1, 'there': 1, 'general': 1, 'uncertainty': 1, 'pointing': 1, 'events': 1, 'market': 1, 'waiting': 1, 'including': 1, 'passage': 1, 'governments': 1, 'new': 1, 'economic': 1, 'measures': 1, 'through': 1, 'congress': 1, 'now': 1, 'until': 1, 'early': 1, 'october': 1, 'in': 1, 'addition': 1, 'traders': 1, 'awaiting': 1, 'meeting': 1, 'friday': 1, 'between': 1, 'economy': 1, 'minister': 1, 'roque': 1, 'fernandez': 1, 'international': 1, 'monetary': 1, 'fund': 1, 'delegation': 1, 'fiscal': 1, 'deficit': 1, 'axel': 1, 'bugge': 1, 'buenos': 1, 'aires': 1, 'newsroom': 1})\n"
      ]
     }
    ],
    "source": [
-    "# Reading in the common-english-words.txt file\n",
-    "common_stopwords_file = open('wk2_workshop_data/common-english-words.txt', 'r')\n",
+    "text_to_parse = parse_doc('wk2_workshop_data/6146.xml', 'wk2_workshop_data/common-english-words.txt')\n",
     "\n",
-    "document_file = open('wk2_workshop_data/6146.xml', 'r')\n",
-    "document_text = document_file.read()\n",
-    "document_file.close()\n",
+    "print(text_to_parse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 3: \n",
+    "Design a main function to read a xml file and\n",
+    "common-english-words.txt (the list of stopping words), call\n",
+    "function parse_doc(input, stops), and print the itemid\n",
+    "(docid), the number of words (word_count) and the number\n",
+    "of terms (len(curr_doc))."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_parsed_output(parsed_file, stopwords_file):\n",
+    "    parsed_contents = parse_doc(parsed_file, stopwords_file)\n",
+    "    word_count = parsed_contents[0]\n",
+    "    docid = parsed_contents[1]\n",
+    "    doc_freq = parsed_contents[2]\n",
     "\n",
-    "curr_doc = {}\n",
-    "\n",
-    "stopwords_file = common_stopwords_file.read().split(',')\n",
-    "common_stopwords_file.close()\n",
-    "\n",
-    "line = select_sentence(document_file, stopwords_file)\n",
-    "line = line.replace('<p>', '').replace('</p>', '')\n",
-    "line = line.translate(str.maketrans('', '', string.digits)).translate(str.maketrans(string.punctuation, ' '*len(string.punctuation)))\n",
-    "print(line)\n",
-    "words = line.split()\n",
-    "print(words)\n",
-    "terms = [word.lower() for word in words if len(word) > 2]\n",
-    "print(terms)"
+    "    print(f'Document itemid: {docid} contains: {word_count} words and {len(doc_freq)} terms')\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document itemid: 6146 contains: 137 words and 77 terms\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_parsed_output('wk2_workshop_data/6146.xml', 'wk2_workshop_data/common-english-words.txt')"
    ]
   },
   {
