Completed Week 3 Workshop

--- a/week3/week3_workshop.ipynb
+++ b/week3/week3_workshop.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +206,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Stemming:  {'argentine': 1, 'bonds': 1, 'slightly': 1, 'higher': 1, 'small': 1, 'technical': 2, 'bounce': 2, 'wednesday': 1, 'amid': 1, 'low': 1, 'volume': 1, 'trader': 2, 'large': 1, 'foreign': 1, 'bank': 1, 'slight': 1, 'opening': 1, 'expect': 1, 'prices': 1, 'change': 1, 'much': 1, 'during': 1, 'session': 1, 'marketmoving': 1, 'news': 1, 'expected': 2, 'percent': 1, 'dollardenominated': 1, 'bocon': 1, 'previsional': 1, 'due': 2, 'rose': 2, 'argentinas': 2, 'frb': 1, 'general': 1, 'uncertainty': 1, 'pointing': 1, 'events': 1, 'market': 1, 'waiting': 1, 'including': 1, 'passage': 1, 'governments': 1, 'new': 1, 'economic': 1, 'measures': 1, 'through': 1, 'congress': 1, 'now': 1, 'until': 1, 'early': 1, 'october': 1, 'addition': 1, 'traders': 1, 'awaiting': 1, 'meeting': 1, 'friday': 1, 'between': 1, 'economy': 1, 'minister': 1, 'roque': 1, 'fernandez': 1, 'international': 1, 'monetary': 1, 'fund': 1, 'delegation': 1, 'fiscal': 1, 'deficit': 1, 'axel': 1, 'bugge': 1, 'buenos': 1, 'aires': 1, 'newsroom': 1}\n",
+      "Stemming:  {'argentin': 1, 'bond': 1, 'slight': 2, 'higher': 1, 'small': 1, 'technic': 2, 'bounc': 2, 'wednesday': 1, 'amid': 1, 'low': 1, 'volum': 1, 'trader': 3, 'larg': 1, 'foreign': 1, 'bank': 1, 'open': 1, 'expect': 3, 'price': 1, 'chang': 1, 'much': 1, 'dure': 1, 'session': 1, 'marketmov': 1, 'news': 1, 'percent': 1, 'dollardenomin': 1, 'bocon': 1, 'prevision': 1, 'due': 2, 'rose': 2, 'argentina': 2, 'frb': 1, 'general': 1, 'uncertainti': 1, 'point': 1, 'event': 1, 'market': 1, 'wait': 1, 'includ': 1, 'passag': 1, 'govern': 1, 'new': 1, 'econom': 1, 'measur': 1, 'through': 1, 'congress': 1, 'now': 1, 'until': 1, 'earli': 1, 'octob': 1, 'addit': 1, 'await': 1, 'meet': 1, 'friday': 1, 'between': 1, 'economi': 1, 'minist': 1, 'roqu': 1, 'fernandez': 1, 'intern': 1, 'monetari': 1, 'fund': 1, 'deleg': 1, 'fiscal': 1, 'deficit': 1, 'axel': 1, 'bugg': 1, 'bueno': 1, 'air': 1, 'newsroom': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "terms_no_stemming = parse_doc('wk3_workshop_data/6146.xml', 'wk3_workshop_data/common-english-words.txt')[2]\n",
     "\n",
-    "terms_stemming = parse_doc_stemmed('wk3_workshop_data/6146.xml', 'wk3_workshop_data/common-english-words.txt')[2]"
+    "parsed_text_task_2 = parse_doc_stemmed('wk3_workshop_data/6146.xml', 'wk3_workshop_data/common-english-words.txt')\n",
+    "terms_stemming = parsed_text_task_2[2]\n",
+    "\n",
+    "print('No Stemming: ', terms_no_stemming)\n",
+    "print('Stemming: ', terms_stemming)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 3 - Defining a Node Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Doc_Node:\n",
+    "    def __init__(self, data, next = None):\n",
+    "        self.data = data\n",
+    "        self.next = next\n",
+    "\n",
+    "class List_Docs:\n",
+    "    def __init__(self, hnode = None):\n",
+    "        self.head = hnode\n",
+    "\n",
+    "    def insert(self, nnode):\n",
+    "        if not self.head:\n",
+    "            self.head = nnode\n",
+    "            return\n",
+    "        current = self.head\n",
+    "        while current.next:\n",
+    "            current = current.next\n",
+    "        current.next = nnode\n",
+    "\n",
+    "        return nnode\n",
+    "    \n",
+    "    def lprint(self):\n",
+    "        current = self.head\n",
+    "        if not current: \n",
+    "            print('List is empty')\n",
+    "            return\n",
+    "        \n",
+    "        while current: \n",
+    "            data = current.data\n",
+    "            term_count = data[0]\n",
+    "            termid = data[1]\n",
+    "\n",
+    "            print(f'(ID-{termid}: {term_count} terms)')\n",
+    "            current = current.next\n",
+    "        return self\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 4\n",
+    "Design a main function to read a set of xml files and represent eac file as a node, then create a linked list to link all nodes together. You need to update function `parse_doc()`, such as arguments or return value, and then use `Doc_Node` and `List_Docs` classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(ID-6146: 137 terms)\n",
+      "(ID-741299: 191 terms)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.List_Docs at 0x107608690>"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_document = parse_doc_stemmed('wk3_workshop_data/741299newsML.xml', 'wk3_workshop_data/common-english-words.txt')\n",
+    "\n",
+    "doc1 = Doc_Node(parsed_text_task_2)\n",
+    "doc2 = Doc_Node(new_document)\n",
+    "list = List_Docs()\n",
+    "\n",
+    "list.insert(doc1)\n",
+    "list.insert(doc2)\n",
+    "\n",
+    "list.lprint()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
