Week 5 Content Added

--- a/week3/week3_workshop.ipynb
+++ b/week3/week3_workshop.ipynb
@@ -132,9 +132,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(137,\n",
+       " '6146',\n",
+       " {'argentin': 1,\n",
+       "  'bond': 1,\n",
+       "  'slight': 2,\n",
+       "  'higher': 1,\n",
+       "  'small': 1,\n",
+       "  'technic': 2,\n",
+       "  'bounc': 2,\n",
+       "  'wednesday': 1,\n",
+       "  'amid': 1,\n",
+       "  'low': 1,\n",
+       "  'volum': 1,\n",
+       "  'trader': 3,\n",
+       "  'larg': 1,\n",
+       "  'foreign': 1,\n",
+       "  'bank': 1,\n",
+       "  'open': 1,\n",
+       "  'expect': 3,\n",
+       "  'price': 1,\n",
+       "  'chang': 1,\n",
+       "  'much': 1,\n",
+       "  'dure': 1,\n",
+       "  'session': 1,\n",
+       "  'marketmov': 1,\n",
+       "  'news': 1,\n",
+       "  'percent': 1,\n",
+       "  'dollardenomin': 1,\n",
+       "  'bocon': 1,\n",
+       "  'prevision': 1,\n",
+       "  'due': 2,\n",
+       "  'rose': 2,\n",
+       "  'argentina': 2,\n",
+       "  'frb': 1,\n",
+       "  'general': 1,\n",
+       "  'uncertainti': 1,\n",
+       "  'point': 1,\n",
+       "  'event': 1,\n",
+       "  'market': 1,\n",
+       "  'wait': 1,\n",
+       "  'includ': 1,\n",
+       "  'passag': 1,\n",
+       "  'govern': 1,\n",
+       "  'new': 1,\n",
+       "  'econom': 1,\n",
+       "  'measur': 1,\n",
+       "  'through': 1,\n",
+       "  'congress': 1,\n",
+       "  'now': 1,\n",
+       "  'until': 1,\n",
+       "  'earli': 1,\n",
+       "  'octob': 1,\n",
+       "  'addit': 1,\n",
+       "  'await': 1,\n",
+       "  'meet': 1,\n",
+       "  'friday': 1,\n",
+       "  'between': 1,\n",
+       "  'economi': 1,\n",
+       "  'minist': 1,\n",
+       "  'roqu': 1,\n",
+       "  'fernandez': 1,\n",
+       "  'intern': 1,\n",
+       "  'monetari': 1,\n",
+       "  'fund': 1,\n",
+       "  'deleg': 1,\n",
+       "  'fiscal': 1,\n",
+       "  'deficit': 1,\n",
+       "  'axel': 1,\n",
+       "  'bugg': 1,\n",
+       "  'bueno': 1,\n",
+       "  'air': 1,\n",
+       "  'newsroom': 1})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The new function to incorporate the stemming algorithm\n",
     "# Function used from Task 3 of the previous week\n",
@@ -194,7 +276,9 @@
     "            curr_doc[word] += 1\n",
     "    \n",
     "    my_file.close()\n",
-    "    return (word_count, docid, curr_doc)"
+    "    return (word_count, docid, curr_doc)\n",
+    "\n",
+    "parse_doc_stemmed('wk3_workshop_data/6146.xml', 'wk3_workshop_data/common-english-words.txt')"
    ]
   },
   {
@@ -206,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -301,10 +385,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.List_Docs at 0x107608690>"
+       "<__main__.List_Docs at 0x111475400>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
