--- a/week3/week3_workshop.ipynb
+++ b/week3/week3_workshop.ipynb
@@ -385,7 +385,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.List_Docs at 0x111ccd550>"
+       "<__main__.List_Docs at 0x10a001160>"
       ]
      },
      "execution_count": 7,
@@ -430,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
